Port focus clear fix in bug 1156037 to AccessibleCaretManager